force-app/main/default/objects/Expenses__c/fields/Expense_Category__c.field-meta.xml
<CustomField>
    <fullName>Expense_Category__c</fullName>
    <label>Expense Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>