force-app/main/default/objects/Expenses__c/fields/Expense_Number__c.field-meta.xml
<CustomField>
    <fullName>Expense_Number__c</fullName>
    <label>Expense Number</label>
    <type>AutoNumber</type>
</CustomField>