force-app/main/default/objects/Expenses__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <label>Expense Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>